
* SOLR-1811: formatDate should use the current NOW value always (Sean Timm via noble)

* SOLR-2310: getTimeElapsedSince() returns incorrect hour value when the elapse is over 60 hours
  (tom liu via koji)

* SOLR-2252: When a child entity in nested entities is rootEntity="true", delta-import doesn't work.
  (koji)

* SOLR-2330: solrconfig.xml files in example-DIH are broken. (Matt Parker, koji)

Other Changes
----------------------

* SOLR-1821: Fix TimeZone-dependent test failure in TestEvaluatorBag.
  (Chris Male via rmuir)

* SOLR-2367: Reduced noise in test output by ensuring the properties file can be written.
  (Gunnlaugur Thor Briem via rmuir)


Build
----------------------


Documentation
----------------------

================== Release 1.4.0 ==================

Upgrading from Solr 1.3
-----------------------

Evaluator API has been changed in a non back-compatible way. Users who have developed custom Evaluators will need
to change their code according to the new API for it to work. See SOLR-996 for details.

The formatDate evaluator's syntax has been changed. The new syntax is formatDate(<variable>, '<format_string>').
For example, formatDate(x.date, 'yyyy-MM-dd'). In the old syntax, the date string was written without a single-quotes.
The old syntax has been deprecated and will be removed in 1.5, until then, using the old syntax will log a warning.

The Context API has been changed in a non back-compatible way. In particular, the Context.currentProcess() method
now returns a String describing the type of the current import process instead of an int. Similarily, the public
constants in Context viz. FULL_DUMP, DELTA_DUMP and FIND_DELTA are changed to a String type. See SOLR-969 for details.

The EntityProcessor API has been simplified by moving logic for applying transformers and handling multi-row outputs
from Transformers into an EntityProcessorWrapper class. The EntityProcessor#destroy is now called once per